Fix YouTube box width on mobile view

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -218,6 +218,12 @@
 		}
 	}
 
+	section {
+		iframe.youtube {
+			max-width: 100%;
+		}
+	}
+
 	header {
 		p {
 			color: _palette(fg-light);
